# parallel-img-proc

./: .gitignore  CMakeLists.txt  build.sh
libs/image-reader/include/factories/: reader.h
libs/image-reader/src/factories/: readerFactory.cpp
libs/image-reader/src/models/: image.cpp
src/: CMakeLists.txt
src/factories/: readerFactory.cpp  readerFactory.h
src/image-reader/factories/: reader.cpp  reader.h
src/image-reader/models/: image.h
src/models/: image.h
src/utils/: main.h
